# scalepnr

./: CMakeLists.txt  README.md  requirements.yaml  requirements_lin.yaml  requirements_win.yaml
db/: TileGrid.cpp  tilegrid_tool.cpp
db/xc7a100t/: README.TXT  tilegrid.json
doc/: routing.md
gear/: Gear.h  Pin.h  PinType.h  TileType.h
libs/: CMakeLists.txt
libs/abseil-cpp/absl/base/internal/: raw_logging.h
libs/abseil-cpp/absl/log/: absl_check.h  absl_log.h
libs/jsoncpp/src/lib_json/: json_value.cpp
libs/re2/re2/: dfa.cc  prog.h  re2.cc  re2.h  regexp.cc
libs/tcl8.6.14/: CMakeLists.txt
libs/tcl8.6.14/compat/: fake-rfc2553.h
libs/tcl8.6.14/generic/: regcomp.c  regguts.h  tclClock.c  tclInt.h  tclParse.c  tclZlib.c
libs/tcl8.6.14/libtommath/: tommath_private.h
libs/tcl8.6.14/unix/: tclLoadDyld.c  tclUnixChan.c  tclUnixFCmd.c  tclUnixPort.h
libs/tcl8.6.14/win/: tclMain.c
src/: main.cpp
src/clock/: Clock.h  Clocks.cpp  Clocks.h
src/clocks/: Clock.h  Clocks.cpp  Clocks.h  Timing.h  TimingPath.h  Timings.cpp  Timings.h
src/common/: Types.h  debug.cpp  debug.h  formatting.h
src/db/: DeviceFormat.h  Formatting.h  RtlFormat.h  TileGridSpec.h
src/format/: DeviceFormat.h  Formatting.h  RtlFormat.h  TileGridSpec.h  tilegrid_tool.cpp
src/fpga/: Crossbar.cpp  Crossbar.h  Device.cpp  Device.h  ElemType.h  Element.h  Pin.h  Tile.cpp  Tile.h  TileType.h  Types.h  Wire.cpp  Wire.h
src/fpga/xc7/: BelType.h  Crossbar.h  Device.h  Pin.h  PinType.h  Tile.cpp  Tile.h  TileType.h  Types.h  Wire.cpp  Wire.h  WireType.h
src/gear/: BelType.h  Coord.h  Device.cpp  Device.h  Gear.h  Pin.h  PinType.h  Tile.h  TileType.h  Types.h
src/gear/xc7/: BelType.h  Device.h  Pin.h  PinType.h  Tile.cpp  Tile.h  TileType.h  Types.h
src/io/: Formatting.h  TileGridSpec.h
src/pnr/: Bunch.h  Placing.cpp  Placing.h  RegBunch.h  TileSet.h
src/pnr/estimate/: EstimateDesign.cpp  EstimateDesign.h
src/pnr/outline/: OutlineDesign.cpp  OutlineDesign.h
src/pnr/place/: PlaceDesign.cpp  PlaceDesign.h  Placing.cpp  Placing.h
src/pnr/route/: Docking.cpp  Docking.h  RouteDesign.cpp  RouteDesign.h
src/rtl/: Cell.h  Clock.h  Conn.cpp  Conn.h  Design.cpp  Design.h  Inst.cpp  Inst.h  Module.h  Net.h  Port.h  PrintDesign.cpp  PrintDesign.h  RegBunch.h  Rtl.h  Timing.h  TimingPath.h  getConns.cpp  getConns.h  getInsts.cpp  getInsts.h
src/tcl/: check_timing_cmd.cpp  create_clock_cmd.cpp  design_state_cmd.cpp  export_pnr_cmd.cpp  get_nets_cmd.cpp  get_ports_cmd.cpp  get_tiles_cmd.cpp  get_wires_cmd.cpp  load_design_cmd.cpp  load_spec_cmd.cpp  open_design_cmd.cpp  place_design_cmd.cpp  print_design_cmd.cpp  route_design_cmd.cpp  set_property_cmd.cpp  tcl_pnr.cpp  tcl_pnr.h
src/tech/: Tech.cpp  Tech.h  XC7Tech.cpp  XC7Tech.h
src/technology/: Technology.cpp  Technology.h  XC7Tech.cpp  XC7Tech.h
src/tests/fpga/: angle_priority.cpp  arena_test.cpp  cb_names_test.cpp  docking_test.cpp  dst_by_src_test.cpp  packing_test.cpp  passthrough_test.cpp  routing_test.cpp
src/utils/: on_return.h  png_draw.h  referable.h  reporter.h  sscan.h  u256.h
tests/prjxray/: .gitignore  db2fasm.py  db2prj.py  intervaltree.py  prepare.sh  test.sh  test.sv  test.tcl
